--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <title>CakraDay</title>
+  <title>Roxzyenlovers</title>
 <meta charset='UTF-8' />
 <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5'
   name='viewport' />
@@ -49,20 +49,17 @@
     <div class='chatBox'>
       <div id='data' class='chatContent'>
         <div class='chatText'>
-          <span id='text1'> Happy Birthday, Honey! Today isn’t just another year added—it’s a big update in your life.</span>
-          <span id='text2'>I hope every dream on your list comes true without any big bumps along the way. Thank you for being the best partner in this long project called life.</span>
-          <span id='text3'> I wish every step you take this year feels smooth and easy, like clean and well-written code. And if life gives you any problems, we’ll work through them together until everything feels right again.</span>
-          <span id='text4'>I love every memory we’ve created together. I hope this year brings us even more happy moments to add to our collection.</span>
-          <span id='text5'>I don’t need reminders or explanations to know that being with you makes life feel like its best version.</span>
-          <span id='text6'> For the year ahead, I hope for more adventures, and more milestones we can celebrate side by side. I can’t wait to see what the future brings us.</span>
-          <span id='text7'>You’re the little surprise I love discovering every day. There’s always something about you that makes me smile, even on hard days.</span>
-          <span id='text8'> I’m adding more love, more quality time, and more dreams to the story we’re writing together.</span>
-          <span id="text10"> I’m looking forward to building a future full of happiness with you.</span>
-          <span id="text11"> Happy Birthday, Sayang! You’re everything I could ever hope for, and I feel lucky to walk through life with you. </span>
-          <span id="text12">I love you (love you, oh)</span>
-          <span id="text13">I love you in every universe</span>
-          <span id="text14">You'll always be the first</span>
-          <span id='text9'>I love you, you're my only one. tap love<label class="lovein" onclick="selesai();">&#9829;</label></span>
+          <span id='text1'> Deep love message for you dear</span>
+          <span id='text2'> I love you so much that words cannot begin to describe it. I want to spend all of eternity with you and never leave your side.</span>
+          <span id='text3'>There are three things in this world that will always remain a constant: the sun will rise, the wind will blow, and I will love you</span>
+          <span id='text4'>I have fallen for you, hard and I can't get up! No matter what happens, just know that my feelings for you will never change.</span>
+          <span id='text5'>You're not just my boyfriend, you're my best friend. My shoulder to lean on, the one I laugh with, and the one I share all of my secrets with.</span>
+          <span id='text6'> I will always cherish the love that we share for one another. You make me so happy!</span>
+          <span id='text7'> I treasure every moment that we spend together. You are my everything</span>
+          <span id='text8'> You take my breath away. I didn't know someone like you could even exist.</span>
+          <span id="text10"> You make me feel brand new! I couldn't have asked for a better person to come into my life when you did.</span>
+          <span id="text11">  I see a wonderful future for us, full of love and happiness, just like I always have. </span>
+          <span id='text9'>tap love<label class="lovein" onclick="selesai();">&#9829;</label></span>
         </div>
       </div>
     </div>
@@ -78,9 +75,9 @@
 
   <script type="text/javascript">
     //Ucapan Terakhir
-    var a = 0, finish; finish = "And once againn... Happy Birthday, Baby! I hope this birthday brings you happiness and everything you’ve been wishing for. I love youuuuuu <3";
+    var a = 0, finish; finish = "I love you more than my mind can define. I love listening to you. I love looking at you. I love learning about you. I love learning from you. I love thinking about all the wonderful things I love about you. I love how strong you are. I love how much you love me. I love that such love exists. I love loving you and maybe making your day better. I love that I'm yours. I love that you're mine. Beyond that, I really don't care about much anymore just You";
 
-    function bukaWa() {window.location = "https://t.me/PuMlinzhu"}
+    function bukaWa() {window.location = "https://t.me/Opradana"}
 
     function play() {
       //Link Audio Bisa Diganti
@@ -91,8 +88,7 @@
       allowOutsideClick: false,
     });
     async function mulai() {
-      await swals.fire('Hey Baby, I left something special for you—open it and take a look inside.');
-      await swals.fire('There’s a little surprise waiting!');
+      await swals.fire('Hello dear I have something for you.');
       setTimeout(check, 1000); setTimeout(teks1, 1000); play();
     }
 
@@ -111,7 +107,7 @@
     function teks8() {document.getElementById('text8').style.display = "inline-block"; document.getElementById('text8').style.opacity = "1"; setTimeout(teks10, 6500); scroll()}
     function teks10() {document.getElementById('text10').style.display = "inline-block"; document.getElementById('text10').style.opacity = "1"; setTimeout(teks11, 4000); scroll()}
     function teks11() {document.getElementById('text11').style.display = "inline-block"; document.getElementById('text11').style.opacity = "1"; setTimeout(teks12, 3700); scroll()}
-    function teks12() {document.getElementById('text12').style.display = "inline-block"; document.getElementById('text12').style.opacity = "1"; setTimeout(teks13, 3200); scroll()}
+    function teks12() {document.getElementById('text9').style.display = "inline-block"; document.getElementById('text12').style.opacity = "1"; setTimeout(teks13, 3200); scroll()}
     function teks13() {document.getElementById('text13').style.display = "inline-block"; document.getElementById('text13').style.opacity = "1"; setTimeout(teks14, 5500); scroll()}
     function teks14() {document.getElementById('text14').style.display = "inline-block"; document.getElementById('text14').style.opacity = "1"; setTimeout(teks9, 6500); scroll()}
     function teks15() {document.getElementById('text15').style.display = "inline-block"; document.getElementById('text15').style.opacity = "1"; setTimeout(teks16, 5500); scroll()}
